# orchion

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: release-server.yml
apps/orchion-server/: Cargo.toml  build.rs  config.development.toml  config.toml
apps/orchion-server/src/: lib.rs  logging.rs  main.rs
apps/orchion-server/src/api/: caption_boundary.rs  docs.rs  http.rs  http_audio.rs  http_models.rs  http_ocr.rs  http_pdf_images.rs  http_shared.rs  mod.rs  openai.rs  pdf.rs  srt.rs  ui.rs
apps/orchion-server/src/application/: mod.rs  model_cache.rs
apps/orchion-server/src/infrastructure/: mod.rs  orchion.rs
apps/orchion-server/src/settings/: mod.rs
apps/orchion-server/tests/: config_tests.rs  logging_tests.rs  openai_tests.rs  routes_tests.rs
apps/server/: Cargo.toml  config.toml
apps/server/src/: audio.rs  config.rs  docs.rs  lib.rs  main.rs  model_cache.rs  openai.rs  routes.rs  state.rs
apps/server/tests/: audio_tests.rs  config_tests.rs  openai_tests.rs  routes_tests.rs
crates/orchion-audio/src/: codec.rs
crates/orchion-audio/tests/: audio_codec_tests.rs
crates/orchion-core/: Cargo.toml
crates/orchion-core/src/asr/: mod.rs
crates/orchion-core/src/model/: asr.rs  mod.rs  tts.rs
crates/orchion-download/src/: lib.rs
crates/orchion-qwen3/: Cargo.toml
crates/orchion-qwen3/src/: blocking.rs  lib.rs
crates/orchion/src/: asr.rs
docs/: asr-streaming.md  asr-streaming.zh-CN.md  asr.md  asr.zh-CN.md  ocr.md  ocr.zh-CN.md  pdf.md  pdf.zh-CN.md  tts.md  tts.zh-CN.md
examples/asr-file/: Cargo.toml
examples/asr-file/src/: main.rs
examples/asr-streaming/: Cargo.toml
examples/asr-streaming/src/: main.rs
examples/asr_file/: Cargo.toml
examples/asr_file/src/: main.rs
examples/asr_streaming/: Cargo.toml
examples/asr_streaming/src/: main.rs
examples/download-model/: Cargo.toml
examples/download-model/src/: main.rs
examples/download_model/: Cargo.toml
examples/tts-preset/: Cargo.toml
examples/tts-preset/src/: main.rs
examples/tts_preset/: Cargo.toml
examples/tts_preset/src/: main.rs
libs/orchion/: Cargo.toml
libs/orchion-audio/: Cargo.toml
libs/orchion-audio-vad/: Cargo.toml
libs/orchion-audio-vad/src/: lib.rs  streaming.rs
libs/orchion-audio-vad/tests/: segmenter_tests.rs
libs/orchion-audio/src/: codec.rs  lib.rs
libs/orchion-audio/tests/: audio_codec_tests.rs
libs/orchion-core/: Cargo.toml
libs/orchion-core/src/: device.rs  error.rs  lib.rs
libs/orchion-core/src/asr/: mod.rs
libs/orchion-core/src/model/: asr.rs  id.rs  mod.rs  ocr.rs  tts.rs
libs/orchion-core/src/ocr/: mod.rs
libs/orchion-core/src/tts/: mod.rs
libs/orchion-docs/: Cargo.toml
libs/orchion-docs/src/: lib.rs
libs/orchion-download/: Cargo.toml
libs/orchion-download/src/: lib.rs
libs/orchion-ocr/: Cargo.toml
libs/orchion-ocr/src/: device.rs  lib.rs  result.rs  runtime.rs
libs/orchion-qwen3/: Cargo.toml
libs/orchion-qwen3/src/: asr.rs  device.rs  lib.rs  tts.rs
libs/orchion-vad/: Cargo.toml
libs/orchion-vad/src/: lib.rs
libs/orchion-vad/tests/: segmenter_tests.rs
libs/orchion/src/: asr.rs  audio.rs  audio_vad.rs  blocking.rs  error.rs  lib.rs  model.rs  ocr.rs  tts.rs
libs/orchion/src/asr/: audio.rs  mod.rs
libs/orchion/src/download/: mod.rs
libs/orchion/src/tts/: mod.rs
libs/orchion/tests/: audio_codec_tests.rs  audio_vad_api_tests.rs  download_integration.rs
scripts/: build-linux-cpu.sh  build-linux-cuda.sh  build-macos-cpu.sh  build-macos-metal.sh  build-windows-cpu.cmd  build-windows-cuda.cmd
sdks/orchion-client/: Cargo.toml
sdks/orchion-client/src/: asr.rs  client.rs  config.rs  error.rs  lib.rs  models.rs  ocr.rs  pdf.rs  tts.rs
sdks/orchion-client/tests/: http_api_tests.rs
web/: index.html  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/features/asr/: metadata.ts  request.ts  streaming.ts  types.ts
web/src/features/models/: modelCatalog.ts  useModels.ts
web/src/features/ocr/: form.ts  metadata.ts  request.ts  types.ts
web/src/features/pdf/: metadata.ts  request.ts  types.ts  zipPreview.ts
web/src/features/tts/: metadata.ts  request.ts  types.ts
web/src/pages/: AsrPage.tsx  ModelsPage.tsx  OcrPage.tsx  PdfPage.tsx  SettingsPage.tsx  TtsPage.tsx
web/src/shared/: clipboard.ts
web/src/shared/api/: apiHelpers.ts  client.ts  errors.ts  types.ts
web/src/shared/i18n/: index.ts
web/src/shared/storage/: persistentState.ts
web/src/shared/ui/: Alert.tsx  AppLayout.tsx  Badge.tsx  Button.tsx  Card.tsx  CodePreview.tsx  CommandPalette.tsx  FormField.tsx  MetadataPanel.tsx  Modal.tsx  ModelStatus.tsx  Sidebar.tsx  StateView.tsx  Tabs.tsx  Toast.tsx  Tooltip.tsx  TopBar.tsx  index.ts
web/src/styles/: components.css  design-tokens.css  global.css  index.css  layouts.css  reset.css  utilities.css
web/src/test/: api-errors.test.ts  asr-request.test.ts  asr-streaming.test.ts  ocr-form.test.ts  sidebar-layout.test.tsx  tts-request.test.ts
