[workspace]
resolver = "2"
members = [
    "examples/asr-file",
    "examples/asr-streaming",
    "examples/download-model",
    "examples/tts-preset",
    "libs/orchion-core",
    "libs/orchion-audio",
    "libs/orchion-audio-vad",
    "libs/orchion-download",
    "libs/orchion-ocr",
    "libs/orchion-qwen3",
    "libs/orchion",
    "apps/orchion-server",
]
