[package]
name = "orchion-server"
version = "0.3.0"
edition = "2024"
rust-version = "1.95"
publish = false

[features]
default = ["cpu"]
cpu = ["orchion/cpu"]
metal = ["orchion/metal"]
cuda = ["orchion/cuda"]

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json", "multipart", "ws"] }
clap = { version = "4", features = ["derive"] }
http = "1"
include_dir = "0.7"
orchion = { path = "../../libs/orchion", default-features = false, features = ["asr", "tts", "ocr", "ocr-vl", "docs", "audio-ffmpeg", "download-all", "vad-webrtc", "serde", "schema"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "fs", "sync", "time"] }
toml = "1.1"
tower-http = { version = "0.7", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[build-dependencies]
flate2 = "1"
tar = "0.4"
ureq = "3"

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
