[package]
name = "orchion-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Domain types and errors for Orchion speech workflows"
license = "MIT"
repository = "https://github.com/xuan/orchion"

[dependencies]
anyhow = "1"
thiserror = "2"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
