[package]
name = "orchion-example-download-model"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
orchion = { path = "../../libs/orchion", default-features = false, features = ["download"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
