[package]
name = "orchion-example-tts-preset"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
publish = false

[features]
default = []
cpu = ["orchion/cpu"]
metal = ["orchion/metal"]
cuda = ["orchion/cuda"]
flash-attn = ["orchion/flash-attn"]

[dependencies]
orchion = { path = "../../libs/orchion", default-features = false, features = ["tts-qwen3", "download-all"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
