[package]
name = "orchion-audio-vad"
version = "0.2.0"
edition = "2024"
rust-version = "1.86"
description = "Voice activity detection utilities for Orchion"
license = "MIT"
repository = "https://github.com/xuan/orchion"

[dependencies]
orchion-core = { path = "../orchion-core" }
wavekat-vad = { version = "0.1", default-features = false, features = ["webrtc"] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
