[package]
name = "orchion-audio"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "FFmpeg-backed audio codecs for Orchion"
license = "MIT"
repository = "https://github.com/xuan/orchion"

[dependencies]
orchion-core = { path = "../orchion-core" }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
hound = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
