[package]
name = "orchion-audio"
version = "0.2.0"
edition = "2024"
rust-version = "1.86"
description = "FFmpeg-backed audio codecs for Orchion"
license = "MIT"
repository = "https://github.com/xuan/orchion"

[dependencies]
hound = "3"
orchion-core = { path = "../orchion-core" }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
