[package]
name = "orchion-audio"
version = "0.3.0"
edition = "2024"
rust-version = "1.95"
description = "FFmpeg-backed audio codecs for Orchion"
license = "MIT"
repository = "https://github.com/xuan/orchion"

[dependencies]
hound = "3"
orchion-core = { version = "0.3.0", path = "../orchion-core" }
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
