[package]
name = "orchion-core"
version = "0.2.0"
edition = "2024"
rust-version = "1.86"
description = "Domain types and errors for Orchion speech workflows"
license = "MIT"
repository = "https://github.com/xuan/orchion"

[features]
default = []
serde = ["dep:serde"]
schema = ["dep:utoipa"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"
utoipa = { version = "5", optional = true }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
