[package]
name = "orchion-core"
version = "0.3.0"
edition = "2024"
rust-version = "1.95"
description = "Domain types and errors for Orchion speech workflows"
license = "MIT"
repository = "https://github.com/xuan/orchion"

[features]
default = []
serde = ["dep:serde"]
schema = ["dep:utoipa"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"
utoipa = { version = "5", optional = true }

[dev-dependencies]
serde_json = "1"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
