[package]
name = "orchion-docs"
version = "0.3.0"
edition = "2024"
rust-version = "1.95"
description = "Document processing utilities for Orchion"
license = "MIT"
repository = "https://github.com/xuan/orchion"

[features]
default = []
serde = ["dep:serde"]
schema = ["dep:utoipa"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
pdfium-render = "0.9"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"
utoipa = { version = "5", optional = true }
zip = { version = "8", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
