[package]
name = "orchion-download"
version = "0.2.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"

[features]
default = ["all-providers"]
all-providers = ["huggingface", "modelscope"]
huggingface = []
modelscope = []

[dependencies]
model-hub = "0.1.1"
orchion-core = { path = "../orchion-core" }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
