[package]
name = "orchion-download"
version = "0.3.0"
edition = "2024"
rust-version = "1.95"
description = "Model download and cache management for Orchion"
license = "MIT"
repository = "https://github.com/xuan/orchion"

[features]
default = ["all-providers"]
all-providers = ["huggingface", "modelscope"]
huggingface = []
modelscope = []

[dependencies]
fs2 = "0.4"
model-hub = "0.1.1"
orchion-core = { version = "0.3.0", path = "../orchion-core" }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["fs", "rt", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
