[package]
name = "orchion-qwen3"
version = "0.2.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"

[features]
default = []
asr = ["dep:qwen3-asr"]
tts = ["dep:qwen3-tts"]
cpu = ["qwen3-tts?/cpu"]
metal = ["candle-core/metal", "qwen3-asr?/metal", "qwen3-tts?/metal"]
cuda = ["candle-core/cuda", "qwen3-asr?/cuda", "qwen3-tts?/cuda"]
flash-attn = []

[dependencies]
anyhow = "1"
candle-core = "0.9.2"
orchion-core = { path = "../orchion-core" }
qwen3-asr = { version = "0.2", optional = true, default-features = false }
qwen3-tts = { git = "https://github.com/TrevorS/qwen3-tts-rs", optional = true, default-features = false }
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
