[package]
name = "orchion"
version = "0.2.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"

[features]
default = []
full = ["asr-qwen3", "tts-qwen3", "audio-ffmpeg", "download-all", "vad-webrtc"]
asr = ["asr-qwen3"]
tts = ["tts-qwen3"]
download = ["download-all"]
asr-qwen3 = ["dep:orchion-qwen3", "orchion-qwen3/asr"]
tts-qwen3 = ["dep:orchion-qwen3", "orchion-qwen3/tts"]
audio-ffmpeg = ["dep:orchion-audio"]
vad-webrtc = ["dep:orchion-audio-vad"]
serde = ["orchion-core/serde"]
schema = ["orchion-core/schema"]
download-all = ["dep:orchion-download", "orchion-download/all-providers"]
cpu = ["orchion-qwen3?/cpu"]
metal = ["orchion-qwen3?/metal"]
cuda = ["orchion-qwen3?/cuda"]
flash-attn = []

[dependencies]
orchion-audio = { path = "../orchion-audio", optional = true }
orchion-core = { path = "../orchion-core" }
orchion-download = { path = "../orchion-download", default-features = false, optional = true }
orchion-qwen3 = { path = "../orchion-qwen3", default-features = false, optional = true }
orchion-audio-vad = { path = "../orchion-audio-vad", optional = true }
tracing = "0.1"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
